#
# build script written by : Michael Brockus.
# github repo author: Mike Karlesky, Mark VanderVoord, Greg Williams.
#
# license: MIT
#
unity_memory_dir = include_directories('.')

unity_memory_lib = static_library('unity_memory', 
    sources: ['unity_memory.c'],
    dependencies: unity_dep,
    include_directories: unity_memory_dir)
